force-app/main/default/objects/RallyProject__c/RallyProject__c.object-meta.xml
<CustomObject>
    <description>Top level RallyPoint workspace that owns issues, sprints, and releases.</description>
    <label>Rally Project</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Rally Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>