force-app/main/default/objects/RallyProject__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>Target end date for the project.</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>