force-app/main/default/objects/RallyProject__c/fields/Key__c.field-meta.xml
<CustomField>
    <fullName>Key__c</fullName>
    <description>Short project key used when generating RallyPoint issue numbers.</description>
    <label>Project Key</label>
    <length>12</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>