force-app/main/default/objects/RallyProject__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>Target kickoff date for the project.</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>