force-app/main/default/objects/RallyProject__c/fields/Theme_Color__c.field-meta.xml
<CustomField>
    <fullName>Theme_Color__c</fullName>
    <description>CSS-friendly color code leveraged by UI components.</description>
    <label>Theme Color</label>
    <length>18</length>
    <type>Text</type>
</CustomField>